# st7789t3

./: .env  .gitignore  README.md  build.sh  display.service  meson.build  meson_options.txt
cross/: rpi_armv7.txt
doc/sphinx/: Doxyfile  Makefile
doc/sphinx/source/: build_instructions.rst  conf.py  example_usages.rst  freetype_text_api.rst  gfx_api.rst  image_loader_api.rst  index.rst  module_guide.rst  st7789_api.rst  st7789t3_driver_api.rst  systemd_setup.rst
include/: display_init.h  freetype_text.h  gfx.h  image_loader.h  st7789t3.h  st7789t3_driver.h
src/: display_init.c  freetype_text.c  gfx.c  image_loader.c  lcd_driver.c  main.c  st7789.c  st7789t3.c  st7789t3_driver.c
subprojects/: unity.wrap
subprojects/stb/: meson.build
tests/: meson.build  test_display.c
